@@ -446,6 +446,8 @@ export(should_stop)
 export(stat_bar)
 export(stat_bin)
 export(stat_bin2d)
+export(stat_bin_2d)
+export(stat_bin_hex)
 export(stat_binhex)
 export(stat_boxplot)
 export(stat_contour)
